crates/backyard-parser/tests/snapshots/objectaccess__safe.snap
---
source: crates/backyard-parser/tests/objectaccess.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: object_access
    object:
      node_type: this
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: ~
      trailings: ~
    property:
      node_type: identifier
      name:
        - 102
        - 114
        - 111
        - 109
      loc:
        start:
          line: 1
          column: 8
          offset: 8
        end:
          line: 1
          column: 12
          offset: 12
      leadings: ~
      trailings: ~
    use_bracket: false
    is_nullsafe: true
    loc:
      start:
        line: 1
        column: 5
        offset: 5
      end:
        line: 1
        column: 8
        offset: 8
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 12
    offset: 12
leadings: ~
trailings: ~
