crates/backyard-parser/tests/snapshots/objectaccess__var.snap
---
source: crates/backyard-parser/tests/objectaccess.rs
expression: asts
snapshot_kind: text
---
node_type: program
children:
  - node_type: object_access
    object:
      node_type: this
      loc:
        start:
          line: 1
          column: 0
          offset: 0
        end:
          line: 1
          column: 0
          offset: 0
      leadings: ~
      trailings: ~
    property:
      node_type: variable
      name:
        node_type: identifier
        name:
          - 102
          - 114
          - 111
          - 109
        loc:
          start:
            line: 1
            column: 7
            offset: 7
          end:
            line: 1
            column: 11
            offset: 11
        leadings: ~
        trailings: ~
      loc:
        start:
          line: 1
          column: 7
          offset: 7
        end:
          line: 1
          column: 11
          offset: 11
      leadings: ~
      trailings: ~
    use_bracket: false
    is_nullsafe: false
    loc:
      start:
        line: 1
        column: 5
        offset: 5
      end:
        line: 1
        column: 7
        offset: 7
    leadings: ~
    trailings: ~
loc:
  start:
    line: 1
    column: 0
    offset: 0
  end:
    line: 1
    column: 12
    offset: 12
leadings: ~
trailings: ~
